few models tried

--- a/MyCode.ipynb
+++ b/MyCode.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3e2bf28b",
+   "id": "3b6398a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "1854673f",
+   "id": "fcc8f7f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9eefd473",
+   "id": "4ff6aabd",
    "metadata": {},
    "source": [
     "### Exploring data"
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "2affeb06",
+   "id": "5f81ec34",
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "04eda42a",
+   "id": "f362804c",
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "e01e1961",
+   "id": "5e0039f2",
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "cdf761de",
+   "id": "93bb4cd0",
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "32519319",
+   "id": "6d42f893",
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "13ad148c",
+   "id": "b474a950",
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +572,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "46fd14e6",
+   "id": "d412513b",
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "6917cc1e",
+   "id": "f8bf18f3",
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "36c72cc9",
+   "id": "548b53e4",
    "metadata": {},
    "outputs": [
     {
@@ -744,7 +744,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "e1a07266",
+   "id": "eacf7d64",
    "metadata": {},
    "outputs": [
     {
@@ -792,7 +792,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "c7a52330",
+   "id": "f224f05b",
    "metadata": {},
    "outputs": [
     {
@@ -815,14 +815,14 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "196173b6",
+   "id": "8658642d",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "2256a2e8",
+   "id": "613d8cc5",
    "metadata": {},
    "source": [
     "### Cleaning categorical data (filling Na)"
@@ -831,7 +831,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "caac0c0f",
+   "id": "c4b11fcb",
    "metadata": {},
    "outputs": [
     {
@@ -903,7 +903,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "73872fb6",
+   "id": "b8389deb",
    "metadata": {},
    "outputs": [
     {
@@ -1163,7 +1163,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "e4e5ddda",
+   "id": "dfe87618",
    "metadata": {},
    "outputs": [
     {
@@ -1183,7 +1183,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63542b5c",
+   "id": "d8eecc6f",
    "metadata": {},
    "source": [
     "### One hot encoding categorical data"
@@ -1192,7 +1192,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "66927c73",
+   "id": "c363b36a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1205,7 +1205,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "6610c25d",
+   "id": "5fe879bc",
    "metadata": {},
    "outputs": [
     {
@@ -1733,7 +1733,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "7621a7d5",
+   "id": "3ef68e78",
    "metadata": {},
    "outputs": [
     {
@@ -1764,7 +1764,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "398a3989",
+   "id": "c56f49a9",
    "metadata": {},
    "outputs": [
     {
@@ -1784,7 +1784,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08753a61",
+   "id": "b3ce89d4",
    "metadata": {},
    "source": [
     "### Binary data"
@@ -1793,7 +1793,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "b9636fbd",
+   "id": "bfa49ab0",
    "metadata": {},
    "outputs": [
     {
@@ -1813,7 +1813,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "d4e6ade3",
+   "id": "963e7a8a",
    "metadata": {},
    "outputs": [
     {
@@ -1846,7 +1846,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "f3fb73f5",
+   "id": "ae021620",
    "metadata": {},
    "outputs": [
     {
@@ -1867,7 +1867,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "fd83a6d9",
+   "id": "e58863ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1877,7 +1877,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "660274f3",
+   "id": "1b47681e",
    "metadata": {},
    "outputs": [
     {
@@ -1923,7 +1923,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "1b723b03",
+   "id": "b536e9db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1933,7 +1933,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "b2eca4cc",
+   "id": "e8db2128",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1943,7 +1943,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "898d9eb5",
+   "id": "4d015ec1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1953,7 +1953,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "574b7aa7",
+   "id": "ba198180",
    "metadata": {},
    "outputs": [
     {
@@ -1974,7 +1974,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "17ffdcaa",
+   "id": "d2ff342e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1985,7 +1985,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "2b0e5d24",
+   "id": "2d5d36b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1997,7 +1997,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "1db782ec",
+   "id": "a3b3b5d6",
    "metadata": {},
    "outputs": [
     {
@@ -2394,7 +2394,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f47377b",
+   "id": "4ac28201",
    "metadata": {},
    "source": [
     "### Cleaning numerical data (filling Na)"
@@ -2403,7 +2403,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "fc890a79",
+   "id": "b58467b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2414,7 +2414,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "4d3c5696",
+   "id": "8723f394",
    "metadata": {},
    "outputs": [
     {
@@ -2812,7 +2812,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "24f8d580",
+   "id": "fc393e20",
    "metadata": {},
    "outputs": [
     {
@@ -2832,7 +2832,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa396d70",
+   "id": "9afa7154",
    "metadata": {},
    "source": [
     "### Scaling numerical data"
@@ -2841,7 +2841,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "b67d4b98",
+   "id": "56dfd2fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2862,7 +2862,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "c08ad979",
+   "id": "d65b6acd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2874,7 +2874,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "8f86ef96",
+   "id": "f875dbc3",
    "metadata": {},
    "outputs": [
     {
@@ -2895,7 +2895,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "357c7dee",
+   "id": "52a98c50",
    "metadata": {},
    "outputs": [
     {
@@ -2915,7 +2915,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c87e47f",
+   "id": "6dce8383",
    "metadata": {},
    "source": [
     "#### Train test split"
@@ -2924,7 +2924,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "55e1201e",
+   "id": "6a83e232",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2934,7 +2934,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe486a46",
+   "id": "945cb0fe",
    "metadata": {},
    "source": [
     "#### Scaling  numerical train"
@@ -2943,7 +2943,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "3a4d4578",
+   "id": "67db6907",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2956,7 +2956,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "1e84582b",
+   "id": "7488a4de",
    "metadata": {},
    "outputs": [
     {
@@ -3180,7 +3180,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "e609d5fc",
+   "id": "8cbc84e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3190,7 +3190,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "ada7fb0b",
+   "id": "b976bdfe",
    "metadata": {},
    "outputs": [
     {
@@ -3414,7 +3414,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "ac30f2ae",
+   "id": "98f5a135",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3424,7 +3424,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25b5e3ad",
+   "id": "0d71765c",
    "metadata": {},
    "source": [
     "### Concatenating train/test"
@@ -3433,7 +3433,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "4bd075a4",
+   "id": "c3b603eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3444,7 +3444,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "c8b65bb6",
+   "id": "dc037456",
    "metadata": {},
    "outputs": [
     {
@@ -3668,7 +3668,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "70ae5aad",
+   "id": "01ec926e",
    "metadata": {},
    "outputs": [
     {
@@ -3693,7 +3693,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b3e90a9",
+   "id": "512ce8f1",
    "metadata": {},
    "source": [
     "### Trying linear regression"
@@ -3702,7 +3702,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "9d9fbd41",
+   "id": "8fa88da3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3713,7 +3713,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "e4541ea4",
+   "id": "bc1a1382",
    "metadata": {},
    "outputs": [
     {
@@ -3734,7 +3734,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "94517680",
+   "id": "5ceba3e7",
    "metadata": {},
    "outputs": [
     {
@@ -3754,15 +3754,195 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "441906c4",
+   "execution_count": 137,
+   "id": "602d52b2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.4504337326069335\n"
+     ]
+    }
+   ],
    "source": [
     "clf = linear_model.Lasso(alpha=0.1)\n",
     "clf.fit(X_train, y_train)\n",
-    "clf.score(X_test, y_test)"
+    "y_pred_clf = clf.predict(X_test)\n",
+    "print(MAE(y_test, y_pred_clf))\n",
+    "#clf.score(X_test, y_test)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "id": "67c869ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9858239454434579"
+      ]
+     },
+     "execution_count": 133,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reg.score(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "589dfe80",
+   "metadata": {},
+   "source": [
+    "### Random Forest "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "id": "22bb95dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestRegressor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "id": "36c112fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.035742761106955144\n"
+     ]
+    }
+   ],
+   "source": [
+    "rf = RandomForestRegressor(max_depth=100, random_state=0, criterion=\"absolute_error\", max_features=\"sqrt\")\n",
+    "rf.fit(X_train, y_train)\n",
+    "y_pred_rf = rf.predict(X_test)\n",
+    "print(MAE(y_test, y_pred_rf))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "id": "5fd5bd6a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.031883320188798005\n"
+     ]
+    }
+   ],
+   "source": [
+    "rf = RandomForestRegressor(max_depth=100, random_state=0, criterion=\"absolute_error\")\n",
+    "rf.fit(X_train, y_train)\n",
+    "y_pred_rf = rf.predict(X_test)\n",
+    "print(MAE(y_test, y_pred_rf))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "id": "67c8dfad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.03021377743476884\n"
+     ]
+    }
+   ],
+   "source": [
+    "rf = RandomForestRegressor(max_depth=200, random_state=1, criterion=\"absolute_error\", oob_score=True)\n",
+    "rf.fit(X_train, y_train)\n",
+    "y_pred_rf = rf.predict(X_test)\n",
+    "print(MAE(y_test, y_pred_rf))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "id": "f6b5ace6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2.30337084, 4.71849887, 3.02849922, 1.19935946, 2.04347343,\n",
+       "       2.03989341, 1.12648666, 1.60943791, 3.21887582, 2.7080502 ,\n",
+       "       2.03989341, 2.38777926, 1.61536157, 2.30337084, 1.94591015,\n",
+       "       1.3885258 , 2.56494936, 2.39789527, 0.69314718, 1.367086  ,\n",
+       "       2.69195582, 2.7080502 , 2.73578489, 1.60943791, 2.06588631,\n",
+       "       2.06270178, 1.09861229, 2.07944154, 2.7080502 , 1.09861229,\n",
+       "       2.54076966, 0.69314718, 2.7080502 , 1.09861229, 3.21887582,\n",
+       "       1.39534433, 2.04347343, 1.09861229, 4.71849887, 4.71849887,\n",
+       "       2.07944154, 2.7080502 , 2.07944154, 2.7080502 , 1.61953208,\n",
+       "       1.60720648])"
+      ]
+     },
+     "execution_count": 148,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred_rf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "id": "58aac84e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.79175947, 4.71849887, 3.13549422, 1.09861229, 2.03989341,\n",
+       "       2.03989341, 1.09861229, 1.60943791, 3.21887582, 2.7080502 ,\n",
+       "       2.03989341, 2.39789527, 1.60943791, 2.77258872, 1.94591015,\n",
+       "       1.38629436, 2.56494936, 2.39789527, 0.69314718, 1.38629436,\n",
+       "       2.7080502 , 2.7080502 , 2.77258872, 1.60943791, 2.07944154,\n",
+       "       2.07944154, 1.09861229, 2.07944154, 2.7080502 , 1.09861229,\n",
+       "       2.56494936, 0.69314718, 2.7080502 , 1.09861229, 3.21887582,\n",
+       "       1.38629436, 2.03989341, 1.09861229, 4.71849887, 4.71849887,\n",
+       "       2.07944154, 2.7080502 , 2.07944154, 2.7080502 , 1.60943791,\n",
+       "       1.60943791])"
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array(list(y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae0e7b2e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
